--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "Mesto React App",
+  "name": "2022 Mesto Russia",
   "icons": [
     {
       "src": "favicon.ico",
